@@ -53,10 +53,15 @@ added-variable plot is drawn for that term only.
 \item{variable}{A quoted string giving the name of a regressor in the model matrix for the horizontal
   axis
 }
-\item{layout}{ If set to a value like \code{c(1,1)} or \code{c(4,3)}, the layout
-  of the graph will have this many rows and columns.  If not set, the program will
-  select an appropriate layout.  If the number of graphs exceed nine, you must 
-  select the layout yourself, or you will get a maximum of nine per page.}
+  \item{layout}{ 
+If set to a value like \code{c(1, 1)} or \code{c(4, 3)}, the layout
+of the graph will have this many rows and columns.  If not set, the program
+will select an appropriate layout.  If the number of graphs exceed nine, you 
+must select the layout yourself, or you will get a maximum of nine per page.
+If \code{layout=NA}, the function does not set the layout and the user can
+use the \code{par} function to control the layout, for example to have 
+plots from two models in the same graphics window.
+}
 \item{main}{The title of the plot; if missing, one will be supplied.
 }
 \item{ask}{If \code{TRUE}, ask the user before drawing the next plot; if \code{FALSE} don't ask.
